# Brainfuck-in-PE

./: .gitignore  CMakeLists.txt  README.md
cmake/: bfdll.cmake
docs/: 可行性报告.md  实现方案.md  实验报告.md
docs/archive/: README.md  可行性分析.md
examples/BfdllCSharp/: BfdllCSharp.csproj  BfdllNative.cs  Program.cs  README.md
exports/: bfdll.def
host/: bfdll.h  test_host.c  test_host_static.c
src/programs/: add.bf  auto_message.bf  hello.bf  hello_world.bf
src/runtime/: bf_abi.h  bf_io.c  bf_io.h  bf_stub.c
tools/: bf2asm.py  verify_dll.ps1
